Rev one of Byrnedawg Engineering Website is up and running

--- a/websites/byrnedawg_com/index.html
+++ b/websites/byrnedawg_com/index.html
@@ -48,7 +48,7 @@
 <h1>Coming Soon!!!</h1>
 <br>
 <div>
-    <img id = "pic1" src="img/ByrneDawginvert 300x300.bmp" alt="ByrneDawg Logo" width = 300>
+    <img id = "pic1" src="imgs/ByrneDawginvert 300x300.bmp" alt="ByrneDawg Logo" width = 300>
 </div>
 <br>
 
